# naive-httpserver

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh
examples/http/: main.c
examples/websocket/: main.c
lib/: server.c  server.h
src/: main.c
